Fill opacity as a graphic property #505