@@ -17,39 +17,68 @@ import java.awt.GraphicsEnvironment;
 import java.awt.Rectangle;
 import java.util.ArrayList;
 import java.util.List;
-import javax.swing.UIManager;
+import javax.swing.JSpinner;
+import javax.swing.SpinnerNumberModel;
 import org.osgi.service.prefs.Preferences;
 import org.weasis.core.api.gui.util.GuiUtils;
 import org.weasis.core.api.service.BundlePreferences;
+import org.weasis.core.api.util.FontItem;
 import org.weasis.core.ui.editor.image.MeasureToolBar;
+import org.weasis.core.ui.editor.image.dockable.MeasureTool;
 import org.weasis.core.ui.model.graphic.Graphic;
 import org.weasis.core.ui.model.utils.ImageStatistics;
 import org.weasis.core.ui.model.utils.bean.Measurement;
 
 public class ViewSetting {
   public static final String PREFERENCE_NODE = "view2d.default";
-
-  private String fontKey;
+  public static final FontItem DEFAULT_FONT = FontItem.SMALL_SEMIBOLD;
+  private FontItem fontItem;
   private boolean drawOnlyOnce;
+  private boolean filled;
+  private float fillOpacity;
   private Color lineColor;
-  private int lineWidth;
+
+  private final SpinnerNumberModel spinnerModel = new SpinnerNumberModel(1, 1, 8, 1);
   private boolean basicStatistics;
   private boolean moreStatistics;
   private final List<Monitor> monitors = new ArrayList<>(2);
+
+  public ViewSetting() {
+    this.fontItem = DEFAULT_FONT;
+    this.drawOnlyOnce = true;
+    this.filled = Graphic.DEFAULT_FILLED;
+    this.fillOpacity = Graphic.DEFAULT_FILL_OPACITY;
+    this.lineColor = Graphic.DEFAULT_COLOR;
+    this.basicStatistics = true;
+    this.moreStatistics = true;
+    spinnerModel.addChangeListener(
+        _ -> {
+          if (spinnerModel.getValue() instanceof Integer intVal) {
+            setLineWidth(intVal);
+            MeasureTool.updateMeasureProperties();
+          }
+        });
+  }
 
   public void applyPreferences(Preferences prefs) {
     if (prefs != null) {
       Preferences p = prefs.node(ViewSetting.PREFERENCE_NODE);
       Preferences font = p.node("font"); // NON-NLS
-      fontKey = font.get("key", "defaultFont"); // NON-NLS
+      String fontKey = font.get("type", DEFAULT_FONT.getKey()); // NON-NLS
+      this.fontItem = FontItem.getFontItem(fontKey, DEFAULT_FONT);
+
       Preferences draw = p.node("drawing"); // NON-NLS
-      drawOnlyOnce = draw.getBoolean("once", true); // NON-NLS
-      lineWidth = draw.getInt("width", 1); // NON-NLS
-      int rgb = draw.getInt("color", Color.YELLOW.getRGB()); // NON-NLS
-      lineColor = new Color(rgb);
+      drawOnlyOnce = draw.getBoolean("once", drawOnlyOnce); // NON-NLS
+      int lineWidth = draw.getInt("width", Graphic.DEFAULT_LINE_THICKNESS.intValue()); // NON-NLS
+      setLineWidth(lineWidth);
+      int rgb = draw.getInt("color", Graphic.DEFAULT_COLOR.getRGB()); // NON-NLS
+      lineColor = new Color(rgb, true);
+      filled = draw.getBoolean("fill", Graphic.DEFAULT_FILLED); // NON-NLS
+      fillOpacity = draw.getFloat("fillOpacity", Graphic.DEFAULT_FILL_OPACITY); // NON-NLS
+
       Preferences stats = p.node("statistics"); // NON-NLS
-      basicStatistics = stats.getBoolean("basic", true); // NON-NLS
-      moreStatistics = stats.getBoolean("more", true); // NON-NLS
+      basicStatistics = stats.getBoolean("basic", basicStatistics); // NON-NLS
+      moreStatistics = stats.getBoolean("more", moreStatistics); // NON-NLS
 
       ImageStatistics.IMAGE_PIXELS.setComputed(basicStatistics);
       ImageStatistics.IMAGE_MIN.setComputed(basicStatistics);
@@ -129,19 +158,23 @@ public class ViewSetting {
       }
 
       Monitor monitor = new Monitor(graphicsDevice);
-      StringBuilder buf = new StringBuilder("screen."); // NON-NLS
-      buf.append(monitor.getMonitorID());
-      Rectangle b = monitor.getBounds();
-      buf.append(".");
-      buf.append(b.width);
-      buf.append("x"); // NON-NLS
-      buf.append(b.height);
-      buf.append(".pitch");
-      double pitch =
-          GuiUtils.getUICore().getLocalPersistence().getDoubleProperty(buf.toString(), 0.0);
+      String screen = buildScreenItem(monitor);
+      double pitch = GuiUtils.getUICore().getLocalPersistence().getDoubleProperty(screen, 0.0);
       monitor.setRealScaleFactor(pitch);
       monitors.add(monitor);
     }
+  }
+
+  static String buildScreenItem(Monitor monitor) {
+    StringBuilder buf = new StringBuilder("screen."); // NON-NLS
+    buf.append(monitor.getMonitorID());
+    Rectangle b = monitor.getBounds();
+    buf.append(".");
+    buf.append(b.width);
+    buf.append("x");
+    buf.append(b.height);
+    buf.append(".pitch");
+    return buf.toString();
   }
 
   private static boolean isTrueValue(String val) {
@@ -158,12 +191,14 @@ public class ViewSetting {
     if (prefs != null) {
       Preferences p = prefs.node(ViewSetting.PREFERENCE_NODE);
       Preferences font = p.node("font"); // NON-NLS
-      BundlePreferences.putStringPreferences(font, "key", fontKey); // NON-NLS
+      BundlePreferences.putStringPreferences(font, "type", getFontItem().getKey()); // NON-NLS
 
       Preferences draw = p.node("drawing"); // NON-NLS
       BundlePreferences.putBooleanPreferences(draw, "once", drawOnlyOnce); // NON-NLS
-      BundlePreferences.putIntPreferences(draw, "width", lineWidth); // NON-NLS
+      BundlePreferences.putIntPreferences(draw, "width", getLineWidth()); // NON-NLS
       BundlePreferences.putIntPreferences(draw, "color", lineColor.getRGB()); // NON-NLS
+      BundlePreferences.putBooleanPreferences(draw, "fill", filled); // NON-NLS
+      BundlePreferences.putFloatPreferences(draw, "fillOpacity", fillOpacity); // NON-NLS
 
       Preferences stats = p.node("statistics"); // NON-NLS
       BundlePreferences.putBooleanPreferences(stats, "basic", basicStatistics); // NON-NLS
@@ -183,7 +218,7 @@ public class ViewSetting {
         if (list != null && !list.isEmpty()) {
           Preferences gpref = p.node(graph.getClass().getSimpleName());
           buffer = new StringBuilder();
-          writeLabels(buffer, list.get(0));
+          writeLabels(buffer, list.getFirst());
           for (int j = 1; j < list.size(); j++) {
             buffer.append(",");
             writeLabels(buffer, list.get(j));
@@ -194,16 +229,17 @@ public class ViewSetting {
     }
   }
 
-  public String getFontKey() {
-    return fontKey;
-  }
-
-  public void setFontKey(String fontKey) {
-    this.fontKey = fontKey;
+  public void setFontItem(FontItem fontItem) {
+    this.fontItem = fontItem == null ? DEFAULT_FONT : fontItem;
   }
 
   public Font getFont() {
-    return UIManager.getFont(fontKey);
+    return getFontItem().getFont();
+  }
+
+  public FontItem getFontItem() {
+    FontItem item = fontItem;
+    return item == null ? DEFAULT_FONT : fontItem;
   }
 
   public void setDrawOnlyOnce(boolean drawOnlyOnce) {
@@ -223,11 +259,27 @@ public class ViewSetting {
   }
 
   public int getLineWidth() {
-    return lineWidth;
+    return (int) spinnerModel.getValue();
   }
 
   public void setLineWidth(int lineWidth) {
-    this.lineWidth = lineWidth;
+    spinnerModel.setValue(Math.max(1, Math.min(8, lineWidth)));
+  }
+
+  public boolean isFilled() {
+    return filled;
+  }
+
+  public void setFilled(boolean filled) {
+    this.filled = filled;
+  }
+
+  public float getFillOpacity() {
+    return fillOpacity;
+  }
+
+  public void setFillOpacity(float fillOpacity) {
+    this.fillOpacity = fillOpacity;
   }
 
   public boolean isBasicStatistics() {
@@ -244,5 +296,10 @@ public class ViewSetting {
 
   public void setMoreStatistics(boolean moreStatistics) {
     this.moreStatistics = moreStatistics;
+  }
+
+  public void initLineWidthSpinner(JSpinner spinner) {
+    spinner.setModel(spinnerModel);
+    GuiUtils.formatCheckAction(spinner);
   }
 }
